# RecSys

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
__MACOSX/: ._interview-best-practices-2024
__MACOSX/interview-best-practices-2024/data/: ._ml-latest-small
__MACOSX/interview-best-practices-2024/data/ml-latest-small/: ._tags.csv
archive/recommender/: helper_functions.py  main.py
data/ml-latest-small-v2/: movies.csv
data/models/: user_neighbors.pkl  user_ratings.pkl
notebooks/: Item-Based and User-Based Recommendations.ipynb
notebooks/.ipynb_checkpoints/: Item-Based and User-Based Recommendations-checkpoint.ipynb
setup/: Dockerfile  movie-recommender.yml
src/: app.py  main.py
src/recommender/: __init__.py
src/recommender/core/: __init__.py  engine.py
src/recommender/file_operations/: __init__.py  readers.py
src/recommender/utils/: __init__.py  input_args.py  logger_config.py
tests/: test_core.py
